ci_cd/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-aggregator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss-aggregator
  template:
    metadata:
      labels:
        app: rss-aggregator
    spec:
      containers:
      - name: rss-aggregator
        image: sriram9217/rss-aggregator:latest
        ports:
        - containerPort: 80  # Correct format: list of objects (array of ports)
