ci_cd/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rss-aggregator-service
spec:
  selector:
    app: rss-aggregator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
