ci_cd/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rss-aggregator-ingress

spec:
  rules:
    - host: rss-aggregator.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: rss-aggregator-service
                port:
                  number: 80
